// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSlider with axis \`x\` should render properly 1`] = `
<RangeSlider
  axis="x"
  classNamePrefix="rrs"
  onChange={[MockFunction]}
  onDragEnd={[MockFunction]}
  x={0}
  xMax={100}
  xMin={0}
  xStep={1}
  y={0}
  yMax={100}
  yMin={0}
  yStep={1}
>
  <div
    className="rrs"
    style={
      Object {
        "boxSizing": "border-box",
        "display": "inline-block",
        "height": 32,
        "padding": "6px",
        "transition": "height 0.4s, width 0.4s",
        "width": "100%",
      }
    }
  >
    <div
      className="rrs__track"
      onClick={[Function]}
      role="presentation"
      style={
        Object {
          "backgroundColor": "#ccc",
          "borderRadius": "3px",
          "boxSizing": "border-box",
          "height": "20px",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className="rrs__range"
        style={
          Object {
            "backgroundColor": "#007bff",
            "borderRadius": "3px",
            "height": "100%",
            "position": "absolute",
            "top": 0,
            "width": "0%",
          }
        }
      />
      <div
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={
          Object {
            "bottom": "0%",
            "boxSizing": "border-box",
            "height": "20px",
            "left": "0%",
            "position": "absolute",
            "transition": "height 0.4s, width 0.4s",
            "width": "20px",
          }
        }
      >
        <span
          aria-label="slider handle"
          aria-orientation="horizontal"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="rrs__handle"
          role="slider"
          style={
            Object {
              "backgroundColor": "#fff",
              "border": "2px solid #000",
              "borderRadius": "4px",
              "boxSizing": "border-box",
              "display": "block",
              "height": 26,
              "left": -5,
              "position": "absolute",
              "top": -3,
              "transition": "height 0.4s, width 0.4s",
              "width": "10px",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</RangeSlider>
`;

exports[`RangeSlider with axis \`xy\` should render properly 1`] = `
<RangeSlider
  axis="xy"
  classNamePrefix="rrs"
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "x": 65,
            "y": 0,
          },
          Object {
            "axis": "x",
            "classNamePrefix": "rrs",
            "onChange": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "onDragEnd": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "x": 65,
                    "y": 0,
                  },
                  [Circular],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "x": 0,
            "xMax": 100,
            "xMin": 0,
            "xStep": 1,
            "y": 0,
            "yMax": 100,
            "yMin": 0,
            "yStep": 1,
          },
        ],
        Array [
          Object {
            "x": 25,
            "y": 0,
          },
          Object {
            "axis": "x",
            "classNamePrefix": "rrs",
            "onChange": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "onDragEnd": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "x": 65,
                    "y": 0,
                  },
                  [Circular],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "x": 0,
            "xMax": 100,
            "xMin": 0,
            "xStep": 1,
            "y": 0,
            "yMax": 100,
            "yMin": 0,
            "yStep": 1,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onDragEnd={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "x": 65,
            "y": 0,
          },
          Object {
            "axis": "x",
            "classNamePrefix": "rrs",
            "onChange": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "x": 65,
                    "y": 0,
                  },
                  [Circular],
                ],
                Array [
                  Object {
                    "x": 25,
                    "y": 0,
                  },
                  [Circular],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "onDragEnd": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "x": 0,
            "xMax": 100,
            "xMin": 0,
            "xStep": 1,
            "y": 0,
            "yMax": 100,
            "yMin": 0,
            "yStep": 1,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  x={0}
  xMax={100}
  xMin={0}
  xStep={1}
  y={0}
  yMax={100}
  yMin={0}
  yStep={1}
>
  <div
    className="rrs"
    style={
      Object {
        "boxSizing": "border-box",
        "display": "inline-block",
        "height": "100%",
        "padding": "6px",
        "transition": "height 0.4s, width 0.4s",
        "width": "100%",
      }
    }
  >
    <div
      className="rrs__track"
      onClick={[Function]}
      role="presentation"
      style={
        Object {
          "backgroundColor": "#ccc",
          "borderRadius": "3px",
          "boxSizing": "border-box",
          "height": "100%",
          "minHeight": "50px",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        className="rrs__range"
        style={
          Object {
            "backgroundColor": "#007bff",
            "borderRadius": "3px",
            "bottom": 0,
            "height": "0%",
            "position": "absolute",
            "width": "0%",
          }
        }
      />
      <div
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={
          Object {
            "bottom": "0%",
            "boxSizing": "border-box",
            "height": "20px",
            "left": "0%",
            "position": "absolute",
            "transition": "height 0.4s, width 0.4s",
            "width": "20px",
          }
        }
      >
        <span
          aria-label="slider handle"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="rrs__handle"
          role="slider"
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "2px solid #000",
              "borderRadius": "50%",
              "bottom": -10,
              "boxSizing": "border-box",
              "display": "block",
              "height": "20px",
              "left": -10,
              "position": "absolute",
              "transition": "height 0.4s, width 0.4s",
              "width": "20px",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</RangeSlider>
`;

exports[`RangeSlider with axis \`y\` should render properly 1`] = `
<RangeSlider
  axis="y"
  classNamePrefix="rrs"
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "x": 65,
            "y": 0,
          },
          Object {
            "axis": "x",
            "classNamePrefix": "rrs",
            "onChange": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "onDragEnd": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "x": 65,
                    "y": 0,
                  },
                  [Circular],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "x": 0,
            "xMax": 100,
            "xMin": 0,
            "xStep": 1,
            "y": 0,
            "yMax": 100,
            "yMin": 0,
            "yStep": 1,
          },
        ],
        Array [
          Object {
            "x": 25,
            "y": 0,
          },
          Object {
            "axis": "x",
            "classNamePrefix": "rrs",
            "onChange": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "onDragEnd": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "x": 65,
                    "y": 0,
                  },
                  [Circular],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "x": 0,
            "xMax": 100,
            "xMin": 0,
            "xStep": 1,
            "y": 0,
            "yMax": 100,
            "yMin": 0,
            "yStep": 1,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onDragEnd={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "x": 65,
            "y": 0,
          },
          Object {
            "axis": "x",
            "classNamePrefix": "rrs",
            "onChange": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "x": 65,
                    "y": 0,
                  },
                  [Circular],
                ],
                Array [
                  Object {
                    "x": 25,
                    "y": 0,
                  },
                  [Circular],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "onDragEnd": [MockFunction] {
              "calls": [Circular],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "x": 0,
            "xMax": 100,
            "xMin": 0,
            "xStep": 1,
            "y": 0,
            "yMax": 100,
            "yMin": 0,
            "yStep": 1,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  x={0}
  xMax={100}
  xMin={0}
  xStep={1}
  y={0}
  yMax={100}
  yMin={0}
  yStep={1}
>
  <div
    className="rrs"
    style={
      Object {
        "boxSizing": "border-box",
        "display": "inline-block",
        "height": "100%",
        "padding": "6px",
        "transition": "height 0.4s, width 0.4s",
        "width": 32,
      }
    }
  >
    <div
      className="rrs__track"
      onClick={[Function]}
      role="presentation"
      style={
        Object {
          "backgroundColor": "#ccc",
          "borderRadius": "3px",
          "boxSizing": "border-box",
          "height": "100%",
          "minHeight": "50px",
          "position": "relative",
          "width": "20px",
        }
      }
    >
      <div
        className="rrs__range"
        style={
          Object {
            "backgroundColor": "#007bff",
            "borderRadius": "3px",
            "bottom": 0,
            "height": "0%",
            "left": 0,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
      <div
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={
          Object {
            "bottom": "0%",
            "boxSizing": "border-box",
            "height": "20px",
            "left": "0%",
            "position": "absolute",
            "transition": "height 0.4s, width 0.4s",
            "width": "20px",
          }
        }
      >
        <span
          aria-label="slider handle"
          aria-orientation="vertical"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="rrs__handle"
          role="slider"
          style={
            Object {
              "backgroundColor": "#fff",
              "border": "2px solid #000",
              "borderRadius": "4px",
              "bottom": -5,
              "boxSizing": "border-box",
              "display": "block",
              "height": "10px",
              "left": -3,
              "position": "absolute",
              "transition": "height 0.4s, width 0.4s",
              "width": 26,
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</RangeSlider>
`;
